<resources>
    <string name="app_name">xd</string>
    <string name="username">Username</string>
    <string name="registrar_ahora">Registrar Ahora!</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="canada_lo">Canada Lo</string>
    <string name="registro">Registro</string>
    <string name="crea_tu_nueva_cuenta">!Crea tu nueva cuenta!</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="espacios_texto">_____________________________________________</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="Texto_Politicas">Para continuar debe aceptar los terminos de servicio y politicas de privacidad</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="contra_Crear">Contraseña</string>
    <string name="correo_registro">Correo Electronico</string>
    <string name="bienvenido_de_vuelta">Bienvenido de vuelta!</string>
    <string name="inicia_sesi_n_en_tu_cuenta">Inicia sesión en tu cuenta</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="loginText">Iniciar Sesion</string>
    <string name="registerQuestion">Aun no tienes una cuenta?</string>
    <string name="register">Registrate</string>
</resources>