<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuRegistro">

    <TextView
        android:id="@+id/Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/registro"
        android:textColor="@color/colorPrincipal"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/CrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/crea_tu_nueva_cuenta"
        android:textSize="15sp">

    </TextView>

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/nombre_completo"
        android:textColor="@color/colorPrincipal"
        android:textSize="18sp"
        android:textStyle="italic">

    </TextView>

    <EditText
        android:id="@+id/nombrecomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

    </EditText>

    <TextView
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/correo_registro"
        android:textColor="@color/colorPrincipal"
        android:textSize="18sp"
        android:textStyle="italic">

    </TextView>

    <EditText
        android:id="@+id/correoelec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

    </EditText>

    <TextView
        android:id="@+id/contra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/contra_Crear"
        android:textColor="@color/colorPrincipal"
        android:textSize="18sp"
        android:textStyle="italic">

    </TextView>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

    </EditText>

    <TextView
        android:id="@+id/repetircontra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/repetir_contrase_a"
        android:textColor="@color/colorPrincipal"
        android:textSize="18sp"
        android:textStyle="italic">

    </TextView>

    <EditText
        android:id="@+id/repetirpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

    </EditText>

    <TextView
        android:id="@+id/terminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/Texto_Politicas"
        android:textSize="15sp">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corner"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/crear_cuenta"
        android:textColor="@color/white">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/iniciocuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:text="@string/ya_tienes_una_cuenta_inicia_sesi_n">

    </TextView>
</LinearLayout>
